--- a/Resources/Node.js/public/js/partials/dictionaryEdit.html
+++ b/Resources/Node.js/public/js/partials/dictionaryEdit.html
@@ -1,6 +1,6 @@
 <!-- http://codepen.io/salalaslam/pen/wajGMx -->
 
-<div ng-controller="iemlDictionaryController" class="gridListDynamicTiles"  >
+<div class="gridListDynamicTiles"  >
   <md-grid-list md-cols="4" md-row-height="40px" md-gutter="0px">
     <md-grid-tile ng-repeat="tile in tiles" md-rowspan="{{tile.span.row}}" md-colspan="{{tile.span.col}}" style=" border-style: solid;
         border-width: 1px; border-color: black;" ng-class="tile.background">  
@@ -8,4 +8,9 @@
         <h3 ng-show="!tile.edit">{{tile.value}}</h3>
     </md-grid-tile>
   </md-grid-list>
+  
+  <br/><br/>
+  <md-button class="md-raised" ng-click="submitEdit()" disabled="disabled"> Submit </md-button>	
+  <md-button class="md-raised" ng-click="cancelEdit()"> Cancel </md-button>
+  
 </div>
