--- a/Resources/Node.js/public/stylesheets/mystyle.css
+++ b/Resources/Node.js/public/stylesheets/mystyle.css
@@ -1,7 +1,24 @@
 
+.materialApp .text-capitalize {
+  text-transform: capitalize; }
+.materialApp .md-fab:hover, .materialApp .md-fab.md-focused {
+  background-color: #000 !important; }
+.materialApp p.note {
+  font-size: 1.2rem; }
+.materialApp .lock-size {
+  min-width: 300px;
+  min-height: 300px;
+  width: 300px;
+  height: 300px;
+  margin-left: auto;
+  margin-right: auto; }
+
+
+
+/* ------------- styles for loadTerms ---------------*/
  #vertical-container {
-  height: 345px;
-  width: 375px; }
+  height: 600px;
+  width: 900px; }
  .repeated-item {
   border-bottom: 1px solid #ddd;
   box-sizing: border-box;
@@ -9,12 +26,11 @@
   padding-top: 6px; }
  md-content {
   margin: 0px; }
-  md-virtual-repeat-container {
-    border: solid 1px grey; } 
  .md-virtual-repeat-container .md-virtual-repeat-offsetter {
   padding-left: 16px; }
+/* ------------- styles for loadTerms ---------------*/  
   
-  
+/* ------------- styles for chips (not used) ---------------*/  
  .custom-chips .md-chip {
   position: relative;
   padding-right: 35px; }
@@ -47,9 +63,9 @@
         fill: white; }
        .custom-chips .md-chip .md-chip-remove-container button.vegetablechip:hover,  .custom-chips .md-chip .md-chip-remove-container button.vegetablechip:focus {
         background: rgba(255, 0, 0, 0.8); }
+/* ------------- styles for chips (not used) ---------------*/  
 
 /* styles for dictionary edit-*/
-
 .gridListDynamicTiles .gray {
   background: #f5f5f5; }
 .gridListDynamicTiles .green {
@@ -60,7 +76,6 @@
   background: #84ffff; }
 
 /* styles needed to aling main menu icons with lables*/
-
 i.material-icons {
     vertical-align: middle;
 }
