Adding paradigm, class and layer to html. There is a bug in filtering. 	modified:   public/js/material.js 	modified:   public/js/partials/editIeml.html

--- a/Resources/Node.js/public/js/partials/editIeml.html
+++ b/Resources/Node.js/public/js/partials/editIeml.html
@@ -35,6 +35,17 @@
 		  <div ng-message="exists">Value already exists in database.</div>	
         </div>
       </md-input-container>
+      <div layout="row">
+        <md-checkbox ng-model="data.isParadigm">
+          Paradigm
+        </md-checkbox>
+		<md-button class="md-raised" style="text-transform: none;" ng-disabled="true" ng-model="data.layer"> 
+		  Layer {{data.layer}}
+		</md-button> 
+		<md-button class="md-raised" style="text-transform: none;" ng-disabled="true" ng-model="data.gclass"> 
+		  Class {{data.gclass}}
+		</md-button> 		
+      </div>	  
     </form>
 	<md-button class="md-raised" ng-click="submitEdit()" ng-disabled="projectForm.$invalid"> Submit </md-button>	
 	<md-button class="md-raised" ng-click="cancelEdit()"> Cancel </md-button>
