no validate on edit, fix console md-menu error message

--- a/Resources/Node.js/views/material.html
+++ b/Resources/Node.js/views/material.html
@@ -23,7 +23,7 @@
 		<md-toolbar>
 		  <div class="md-toolbar-tools">	
 		    <div>
-              <md-menu>
+             <!-- <md-menu>-->
                 <md-button class="md-icon-button" aria-label="Settings" ng-click="$mdOpenMenu( $event)">
 				  <i class="material-icons">language</i>
 	            </md-button>
@@ -48,7 +48,7 @@
 					  </md-button>
 					</md-menu-item>
 				  </md-menu-content-->
-			  </md-menu>
+			<!--  </md-menu>-->
             </div>
 			<h2>
 			  <span class="md-title">quickIEMLeditor</span>
