alt fix for ngmessage #23

--- a/Resources/Node.js/public/stylesheets/mystyle.css
+++ b/Resources/Node.js/public/stylesheets/mystyle.css
@@ -82,3 +82,8 @@ i.material-icons {
 span.ng-scope {
     vertical-align: middle;
 }
+
+.no-animate {
+   -webkit-transition: none !important;
+   transition: none !important;
+}
