--- a/Resources/Node.js/public/js/partials/editIeml.html
+++ b/Resources/Node.js/public/js/partials/editIeml.html
@@ -15,8 +15,8 @@
     <input type="text" required iemlvalid exists md-maxlength="100"  spellcheck="false" name="ieml" ng-model="iemlValue" /> 
         <div ng-messages="projectForm.ieml.$error">
           <div ng-message="required">This is required.</div>
-          <div ng-message="exists">Value already exists in database.</div>
-          <div ng-message="iemlvalid">Not a valid IEML.</div>			  
+          <div ng-message="exists" class="no-animate">Value already exists in database.</div>
+          <div ng-message="iemlvalid" class="no-animate">Not a valid IEML.</div>			  
           <div ng-message="md-maxlength">The name has to be less than 100 characters long.</div>
         </div>
       </md-input-container>
