adding skeleton for d3 directive

--- a/Resources/Node.js/views/material.html
+++ b/Resources/Node.js/views/material.html
@@ -1,4 +1,4 @@
-<html lang="en" data-ng-app="materialApp">
+<html lang="en" ng-app="materialApp">
 
 <!--md-icon md-svg-icon="../libs/material-design-icons/action/svg/production/ic_delete_24px.svg"></md-icon-->
 <!-- https://www.google.com/design/icons/-->
@@ -82,8 +82,15 @@
 	<script src="../libs/angular-material/angular-material.js"></script>
 	<!-- angular messages-->
 	<script src="../libs/angular-messages/angular-messages.js"></script>
+
+	<script src="../js/d3directive.js"></script>
 	<!-- app -->
 	<script src="../js/material.js"></script>
+
+	<script>
+		//var app = angular.module('app', ['materialApp', 'd3graph']);
+	</script>
+
 	
   </body>
 </html>
