--- a/Resources/Node.js/views/material.html
+++ b/Resources/Node.js/views/material.html
@@ -83,13 +83,13 @@
 	<!-- angular messages-->
 	<script src="../libs/angular-messages/angular-messages.js"></script>
 
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.6/d3.min.js" charset="utf-8"></script>
+
 	<script src="../js/d3directive.js"></script>
 	<!-- app -->
 	<script src="../js/material.js"></script>
 
-	<script>
-		//var app = angular.module('app', ['materialApp', 'd3graph']);
-	</script>
+	
 
 	
   </body>
