pan and zoom for the tree

--- a/Resources/Node.js/views/material.html
+++ b/Resources/Node.js/views/material.html
@@ -72,7 +72,10 @@
 	</div>
 	<!-- END MIDDLE -->
 	  
-	
+	<!-- jQuery needed for outerWidth to work-->
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+
+
 	<!-- angular -->
 	<script src="../libs/angular/angular.js"></script>
 	<script src="../libs/angular-route/angular-route.js"></script>
