tree in tab first cut

--- a/Resources/Node.js/public/js/partials/dictionaryEdit.html
+++ b/Resources/Node.js/public/js/partials/dictionaryEdit.html
@@ -1,16 +1,40 @@
 <!-- http://codepen.io/salalaslam/pen/wajGMx -->
 
-<div class="gridListDynamicTiles"  >
-  <md-grid-list md-cols="4" md-row-height="40px" md-gutter="0px">
-    <md-grid-tile ng-repeat="tile in tiles" md-rowspan="{{tile.span.row}}" md-colspan="{{tile.span.col}}" style=" border-style: solid;
-        border-width: 1px; border-color: black;" ng-class="tile.background">  
-        <input ng-model="tile.value" ng-show="tile.edit">
-        <h3 ng-show="!tile.edit">{{tile.value}}</h3>
-    </md-grid-tile>
-  </md-grid-list>
-  
-  <br/><br/>
-  <md-button class="md-raised" ng-click="submitEdit()" disabled="disabled"> Submit </md-button>	
-  <md-button class="md-raised" ng-click="cancelEdit()"> Cancel </md-button>
+
+
+
+    <md-tabs md-dynamic-height="" md-border-bottom="">
+      <md-tab label="TABLE">
+        <md-content class="md-padding">
+         
+<!--TABLE -->
+
+        <div class="gridListDynamicTiles"  >
+          <md-grid-list md-cols="4" md-row-height="40px" md-gutter="0px">
+            <md-grid-tile ng-repeat="tile in tiles" md-rowspan="{{tile.span.row}}" md-colspan="{{tile.span.col}}" style=" border-style: solid;
+                border-width: 1px; border-color: black;" ng-class="tile.background">  
+                <input ng-model="tile.value" ng-show="tile.edit">
+                <h3 ng-show="!tile.edit">{{tile.value}}</h3>
+            </md-grid-tile>
+          </md-grid-list>
+          
+          <br/><br/>
+          <md-button class="md-raised" ng-click="submitEdit()" disabled="disabled"> Submit </md-button> 
+          <md-button class="md-raised" ng-click="cancelEdit()"> Cancel </md-button>
   
 </div>
+</md-content>
+      </md-tab>
+      <md-tab label="GRAPH">
+        <md-content class="md-padding">
+
+       <div d3ieml style="width=100%; height=100%"> </div>
+       
+        </md-content>
+      </md-tab>
+     
+    </md-tabs>
+
+
+
+
