Removing redundant error message at bottom of record edit page (ieml validation was already fixed), updating welcome message. 	modified:   Resources/Node.js/public/js/material.js 	modified:   Resources/Node.js/public/js/partials/welcome.html

--- a/Resources/Node.js/public/js/partials/welcome.html
+++ b/Resources/Node.js/public/js/partials/welcome.html
@@ -52,8 +52,18 @@
 
   <md-content layout-padding style="height: 600px;padding: 24px;">
     <h2 class="md-flex">What is new</h2>
+	<h3> Sep 24th, 2015</h3>
+	<h4> Features</h4>
+	<p>Tree display</p>
+	<h4> Fixes</h4>
+    <ul>Error message display on form entry</ul>
+    <ul>Disable tree sorting</ul>
+	<ul>Preserve filtering selection across navigation</ul>
+	
     <h3> Aug 21th, 2015</h3>
-    <p>You can now browse the entire terms database. You can delete terms and create new terms. 
+	<h4> Features</h4>
+	<p>You can now browse the entire terms database. You can delete terms and create new terms. 
 	Filtering is available to focus on specific terms.</p>
+
   </md-content>
 </div>
