--- a/Resources/Node.js/public/js/partials/welcome.html
+++ b/Resources/Node.js/public/js/partials/welcome.html
@@ -10,44 +10,19 @@
           </md-button>
         </md-fab-trigger>
         <md-fab-actions>
-          <md-button aria-label="twitter" class="md-fab md-raised md-mini" ng-click="viewEntry(-1)">
+          <md-button title="View IEML List" class="md-fab md-raised md-mini" ng-click="viewEntry(-1)">
 		    <i class="material-icons">view_list</i>
           </md-button>
-          <md-button aria-label="facebook" class="md-fab md-raised md-mini">
+          <md-button aria-label="no action" class="md-fab md-raised md-mini">
 		    <i class="material-icons">do_not_disturb</i>		  
           </md-button>
-          <md-button aria-label="Google Hangout" class="md-fab md-raised md-mini">
+          <md-button aria-label="no action" class="md-fab md-raised md-mini">
 		    <i class="material-icons">do_not_disturb</i>		  
           </md-button>
         </md-fab-actions>
       </md-fab-speed-dial>
     </div>
-    <!--div layout="row" layout-align="space-around">
-      <div layout="column">
-        <b>Direction</b>
-        <md-radio-group ng-model="selectedDirection">
-          <md-radio-button ng-repeat="direction in availableDirections"
-                           ng-value="direction" class="text-capitalize">
-            {{direction}}
-          </md-radio-button>
-        </md-radio-group>
-      </div>
-      <div layout="column">
-        <b>Open/Closed</b>
-        <md-radio-group ng-model="isOpen">
-          <md-radio-button ng-value="true">Open</md-radio-button>
-          <md-radio-button ng-value="false">Closed</md-radio-button>
-        </md-radio-group>
-      </div>
-      <div layout="column">
-        <b>Animation Modes</b>
-        <md-radio-group ng-model="selectedMode">
-          <md-radio-button ng-repeat="mode in availableModes" ng-value="mode">
-            {{mode}}
-          </md-radio-button>
-        </md-radio-group>
-      </div>
-    </div-->
+   
   </md-content>
 
   <md-content layout-padding style="height: 600px;padding: 24px;">
