JSON format for table representation 	modified:   Resources/Node.js/public/js/partials/welcome.html 	modified:   ScriptParser/src/Utilities/TableGenerator.java

--- a/Resources/Node.js/public/js/partials/welcome.html
+++ b/Resources/Node.js/public/js/partials/welcome.html
@@ -26,7 +26,21 @@
   </md-content>
 
   <md-content layout-padding style="height: 600px;padding: 24px;">
+  
     <h2 class="md-flex">What is new</h2>
+	
+	<h3> Oct 3rd, 2015</h3>
+	<h4> Fixes</h4>
+    <ul>"Edit" functionality working</ul>
+	
+	<h3> Sep 29th, 2015</h3>
+    <h4> Features</h4>
+	<p>Added tooltips</p>
+	<h4> Fixes</h4>
+    <ul>"Add" functionality moved to toolbar</ul>
+    <ul>Graph nodes' color</ul>
+	<ul>Display "classes" filtering order at top of list</ul>
+
 	<h3> Sep 24th, 2015</h3>
 	<h4> Features</h4>
 	<p>Tree display</p>
