--- a/Resources/Node.js/views/material.html
+++ b/Resources/Node.js/views/material.html
@@ -36,6 +36,13 @@
 				  <i class="material-icons">add</i>
 	         </md-button>
 
+	         <span flex></span>
+
+	          <md-button class="md-icon-button" title="Sign In"  ng-click="showSignIn($event)">
+				  <i class="material-icons">lock open</i>
+	         </md-button>
+
+
 		  </div>
 
 		   
