auth works first cut for add and edit

--- a/Resources/Node.js/views/material.html
+++ b/Resources/Node.js/views/material.html
@@ -12,6 +12,9 @@
 	  
 	<!-- following css is required to get the "delete" button in side chips to look nice -->
 	<link rel="stylesheet" href="/stylesheets/mystyle.css">
+
+	<link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css" />
+  
 	
   </head>
   
