--- a/Resources/Node.js/public/js/partials/dictionaryEdit.html
+++ b/Resources/Node.js/public/js/partials/dictionaryEdit.html
@@ -6,25 +6,18 @@
     <md-tabs md-dynamic-height="" md-border-bottom="">
       <md-tab label="TABLE">
         <md-content class="md-padding">
-         
-<!--TABLE -->
+        
+        <!--div ng-repeat="materialTable in materialTables"  ng-show="$index==indexOfTable"--> 		
+		 
+        <!--TABLEs -->
+        <md-slider flex="" class="md-primary" md-discrete="" ng-model="indexOfTable" step="1" min="1" max={{sliceCount}} aria-label="depth"></md-slider>
 
+        <div class="gridListDynamicTiles">
 
-          <md-slider flex="" class="md-primary" md-discrete="" ng-model="indexOfTable" step="1" min="1" max="12" aria-label="depth">
-          </md-slider>
+          <div ng-repeat="slice in newlistOfLayers"  ng-show="$index==indexOfTable"> 
 
-        <div class="gridListDynamicTiles"  >
-
-
-         
-
-          <div ng-repeat="slice in listOfLayers"  ng-show="$index==indexOfTable"> 
-
-<!-- another ng-repeat on slider var and list of tables, each div has ng-show to display one where ind=slider var-->
-
-
-
-          <md-grid-list md-cols="4" md-row-height="40px" md-gutter="0px">
+          <!-- another ng-repeat on slider var and list of tables, each div has ng-show to display one where ind=slider var-->
+          <md-grid-list md-cols={{materialTableColSize}} md-row-height="40px" md-gutter="0px">
             <md-grid-tile ng-repeat="tile in slice" md-rowspan="{{tile.span.row}}" md-colspan="{{tile.span.col}}" style=" border-style: solid;
                 border-width: 1px; border-color: black;" ng-class="tile.background">  
                 <input ng-model="tile.value" ng-show="tile.edit">
@@ -32,24 +25,30 @@
             </md-grid-tile>
           </md-grid-list>
 
-          <div>
-          
+        <div>
           <br/><br/>
           <md-button class="md-raised" ng-click="submitEdit()" disabled="disabled"> Submit </md-button> 
           <md-button class="md-raised" ng-click="cancelEdit()"> Cancel </md-button>
-  
-</div>
-</md-content>
-      </md-tab>
-      <md-tab label="GRAPH">
-        <md-content class="md-padding">
-
-       <div d3ieml style="width=100%; height=100%"> </div>
-       
+        </div>
+		
+		</div>
+		
+		</div>
+		
+		<!--/div-->
+		
         </md-content>
       </md-tab>
+	
+    <md-tab label="GRAPH">
+      <md-content class="md-padding">
+
+        <div d3ieml style="width=100%; height=100%"> </div>
+       
+      </md-content>
+    </md-tab>
      
-    </md-tabs>
+  </md-tabs>
 
 
 
