--- a/Resources/Node.js/public/js/partials/welcome.html
+++ b/Resources/Node.js/public/js/partials/welcome.html
@@ -29,6 +29,14 @@
   
     <h2 class="md-flex">What is new</h2>
 	
+	<h3> Oct 17th, 2015</h3>
+    <h4> Features</h4>
+	<p>Authorization for 'write' function</p>
+	<p>Table representation</p>
+	<h4>Fixes</h4>
+    <ul>Can use space in entry description</ul>
+
+	
 	<h3> Oct 3rd, 2015</h3>
 	<h4> Fixes</h4>
     <ul>"Edit" functionality working</ul>
