--- a/Resources/Node.js/public/js/partials/dictionaryEdit.html
+++ b/Resources/Node.js/public/js/partials/dictionaryEdit.html
@@ -10,22 +10,32 @@
         <!--div ng-repeat="materialTable in materialTables"  ng-show="$index==indexOfTable"--> 		
 		 
         <!--TABLEs -->
-        <div class="gridListDynamicTiles" ng-show="showTables">
+      <div class="gridListDynamicTiles" ng-show="showTables" >
 
-		  <md-slider flex="" class="md-primary" md-discrete="" ng-model="indexOfTable" step="1" min="1" max={{sliceCount}} aria-label="depth"></md-slider>
+
+       <md-tabs md-dynamic-height="" md-border-bottom="" ng-repeat="maintable in materialTables">
+
+           <md-tab label="{{subtable.tabTitle}}" ng-repeat="subtable in maintable.table" >
+                  <md-content class="md-padding">
+
+
+		  <!--<md-slider flex="" class="md-primary" md-discrete="" ng-model="indexOfTable" step="1" min="1" max={{sliceCount}} aria-label="depth"></md-slider> -->
           
-		  <div ng-repeat="slice in newlistOfLayers"  ng-show="$index==indexOfTable"> 
+              		  
+                          <md-grid-list md-cols="{{materialTableColSize}}" md-row-height="40px" md-gutter="0px">
+                            <md-grid-tile ng-repeat="tile in subtable.slice" md-rowspan="{{tile.span.row}}" md-colspan="{{tile.span.col}}" style=" border-style: solid;
+                              border-width: 1px; border-color: black;" ng-class="tile.background">  
+                              <input ng-model="tile.value" ng-show="tile.edit">
+                              <h3 ng-show="!tile.edit">{{tile.value}}</h3>
+                            </md-grid-tile>
+                          </md-grid-list>
+              	
 
-            <!-- another ng-repeat on slider var and list of tables, each div has ng-show to display one where ind=slider var-->
-            <md-grid-list md-cols={{materialTableColSize}} md-row-height="40px" md-gutter="0px">
-              <md-grid-tile ng-repeat="tile in slice" md-rowspan="{{tile.span.row}}" md-colspan="{{tile.span.col}}" style=" border-style: solid;
-                border-width: 1px; border-color: black;" ng-class="tile.background">  
-                <input ng-model="tile.value" ng-show="tile.edit">
-                <h3 ng-show="!tile.edit">{{tile.value}}</h3>
-              </md-grid-tile>
-            </md-grid-list>
+               </md-content> 
 
-		  </div>
+            </md-tab>
+        </md-tabs>
+
 		
 		</div>
 		
@@ -47,7 +57,7 @@
     <md-tab label="GRAPH">
       <md-content class="md-padding">
 
-        <div d3ieml style="width=100%; height=100%"> </div>
+          <div d3ieml style="width=100%; height=100%"> </div>
        
       </md-content>
     </md-tab>
