--- a/Resources/Node.js/public/js/partials/dictionaryEdit.html
+++ b/Resources/Node.js/public/js/partials/dictionaryEdit.html
@@ -3,7 +3,7 @@
 
 
 
-    <md-tabs md-dynamic-height="" md-border-bottom="">
+    <md-tabs md-dynamic-height="" md-border-bottom="" >
       <md-tab label="TABLE">
         <md-content class="md-padding">
         
@@ -18,8 +18,8 @@
                 <md-grid-list md-cols="{{maintable.Col}}" md-row-height="40px" md-gutter="0px">
                   <md-grid-tile ng-repeat="tile in subtable.slice" md-rowspan="{{tile.span.row}}" md-colspan="{{tile.span.col}}" style=" border-style: solid;
                     border-width: 1px; border-color: black;" ng-class="tile.background">  
-                    <input ng-model="tile.value" ng-show="tile.edit">
-                    <h3 ng-show="!tile.edit">{{tile.value}}</h3>
+                    <!--input ng-model="tile.value" ng-show="tile.edit"-->
+                    <p ng-show="tile.edit">{{tile.value}}</p>
                   </md-grid-tile>
                 </md-grid-list>
               </md-content> 
