--- a/Resources/Node.js/public/js/partials/dictionaryEdit.html
+++ b/Resources/Node.js/public/js/partials/dictionaryEdit.html
@@ -3,7 +3,7 @@
 
 
 
-    <md-tabs md-dynamic-height="" md-border-bottom="" >
+    <md-tabs  md-dynamic-height="" md-border-bottom="" >
       <md-tab label="TABLE">
         <md-content class="md-padding">
         
@@ -11,12 +11,12 @@
 		 
         <!--TABLEs -->
         <div class="gridListDynamicTiles" ng-show="showTables" >
-          <md-tabs md-dynamic-height="" md-border-bottom="" ng-repeat="maintable in materialTables">
+          <md-tabs id = "toastBounds" md-dynamic-height="" md-border-bottom="" ng-repeat="maintable in materialTables">
             <md-tab label="{{subtable.tabTitle}}" ng-repeat="subtable in maintable.table" >
               <md-content class="md-padding">
 		      <!--<md-slider flex="" class="md-primary" md-discrete="" ng-model="indexOfTable" step="1" min="1" max={{sliceCount}} aria-label="depth"></md-slider> -->
                 <md-grid-list md-cols="{{maintable.Col}}" md-row-height="40px" md-gutter="0px">
-                  <md-grid-tile ng-repeat="tile in subtable.slice" md-rowspan="{{tile.span.row}}" md-colspan="{{tile.span.col}}" style=" border-style: solid;
+                  <md-grid-tile ng-click="showLables(tile)" ng-repeat="tile in subtable.slice" md-rowspan="{{tile.span.row}}" md-colspan="{{tile.span.col}}" style=" border-style: solid;
                     border-width: 1px; border-color: black;" ng-class="tile.background">  
                     <!--input ng-model="tile.value" ng-show="tile.edit"-->
                     <p ng-show="tile.edit">{{tile.value}}</p>
