--- a/Resources/Node.js/views/material.html
+++ b/Resources/Node.js/views/material.html
@@ -60,7 +60,7 @@
 	<!-- MIDDLE -->
 	<div flex layout-padding style="width: 1000px;">
 	  <md-content>
-        <ng-view>	
+        <ng-view  id = "toastBounds">	
 		
 		</ng-view>
 	  </md-content>	
