Adding ellipsis if text is too long in cells 	modified:   Resources/Node.js/public/js/material.js 	modified:   Resources/Node.js/public/js/partials/dictionaryEdit.html 	modified:   Resources/Node.js/public/stylesheets/mystyle.css

--- a/Resources/Node.js/public/stylesheets/mystyle.css
+++ b/Resources/Node.js/public/stylesheets/mystyle.css
@@ -87,7 +87,12 @@
 .gridListDynamicTiles .pink {
   background: #ff80ab; }  
   
-  
+/* if the text is too long in the table's cells ...*/ 
+.gridListDynamicTiles .md-list-item-text p {
+      text-overflow: ellipsis;
+      white-space: nowrap;
+      overflow: hidden; }
+	  
 /* styles needed to aling main menu icons with lables*/
 i.material-icons {
     vertical-align: middle;
