--- a/Resources/Node.js/public/js/templates/toast1.tmpl.html
+++ b/Resources/Node.js/public/js/templates/toast1.tmpl.html
@@ -1,4 +1,4 @@
-<md-toast style="opacity:0.4; background: blue;overflow:auto;">
+<md-toast style="opacity:0.4; background: blue;overflow:auto; max-width:800px;">
 
  <md-list>
       
