Entries in table are clipped for both text/ieml 	modified:   Resources/Node.js/public/js/partials/dictionaryEdit.html

--- a/Resources/Node.js/public/js/partials/dictionaryEdit.html
+++ b/Resources/Node.js/public/js/partials/dictionaryEdit.html
@@ -31,7 +31,7 @@
 
 		            <md-list-item ng-show="tile.creatable">
         		      <div flex class="md-list-item-text ">
-         		        {{tile.value}}			
+         		        <p>{{tile.value}}</p>			
         		      </div>
     		        </md-list-item>		
 					
