updating welcome page 	modified:   Resources/Node.js/public/js/partials/welcome.html

--- a/Resources/Node.js/public/js/partials/welcome.html
+++ b/Resources/Node.js/public/js/partials/welcome.html
@@ -29,6 +29,9 @@
   
     <h2 class="md-flex">What is new</h2>
 	
+	<h3> Oct 26th, 2015</h3>
+    <h4>Alpha release!</h4>
+	
 	<h3> Oct 17th, 2015</h3>
     <h4> Features</h4>
 	<p>Authorization for 'write' function</p>
